--- a/index.html
+++ b/index.html
@@ -4,25 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QAICodes Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            text-align: center;
-        }
-        header {
-            padding: 20px;
-            background: #333;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <header>
-        <h1>Welcome to QAICodes Portfolio</h1>
+        <nav class="navbar">
+            <a href="#home" class="logo">QAICodes</a>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="header-content">
+            <h1>Welcome to QAICodes Portfolio</h1>
+            <p>Your AI & Machine Learning Specialist</p>
+            <a href="#about" class="btn">Learn More</a>
+        </div>
     </header>
-    <p>This is your portfolio homepage hosted on GitHub Pages!</p>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hello! I'm QAICodes, a passionate AI engineer specializing in NLP, Generative AI, and cutting-edge technology solutions.</p>
+    </section>
+
+    <section id="projects">
+        <h2>My Projects</h2>
+        <div class="project-grid">
+            <div class="project">
+                <h3>Project 1</h3>
+                <p>A brief description of your AI project.</p>
+                <a href="https://github.com" class="btn">View Project</a>
+            </div>
+            <div class="project">
+                <h3>Project 2</h3>
+                <p>Details about another amazing project you built.</p>
+                <a href="https://github.com" class="btn">View Project</a>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <form id="contact-form">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" placeholder="Your Message" required></textarea>
+            <button type="submit" class="btn">Send</button>
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 QAICodes. All rights reserved.</p>
+    </footer>
 </body>
 </html>
