Make qaicodes.github.io canonical; fix broken links; stabilize type-check

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Qurratulain Saleem | Lead Data Scientist & AI Engineer" />
   <meta property="og:description" content="Transform your data into actionable insights with enterprise-grade AI/ML pipelines. 9+ years of experience in Generative AI, RAG, NLP, and cloud deployment." />
-  <meta property="og:image" content="https://qaicodes.com/assets/social-preview.png" />
-  <meta property="og:url" content="https://qaicodes.com" />
+  <meta property="og:image" content="https://qaicodes.github.io/assets/social-preview.png" />
+  <meta property="og:url" content="https://qaicodes.github.io" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Qurratulain Saleem | AI Engineer & Data Scientist" />
   <meta name="twitter:description" content="9+ years building scalable AI/ML products—RAG chatbots, NLP engines, and cloud deployments. Let's work together!" />
-  <meta name="twitter:image" content="https://qaicodes.com/assets/social-preview.png" />
+  <meta name="twitter:image" content="https://qaicodes.github.io/assets/social-preview.png" />
 
   <!-- Favicon & Touch Icons -->
   <link rel="icon" href="/favicon.ico" />
@@ -95,7 +95,7 @@
               <li class="achievement-list__item">Implemented Explainable AI modules ensuring GDPR compliance</li>
             </ul>
             <div class="card__footer">
-              <a href="/case-studies/sourcefuse-rag-search" class="card__link">View Case Study →</a>
+              <!-- Case study link removed until case-studies pages exist -->
             </div>
           </article>
 
@@ -164,9 +164,7 @@
               <a href="https://github.com/qaicodes/rag-chatbot" class="btn btn--secondary" target="_blank">
                 View on GitHub
               </a>
-              <a href="/case-studies/rag-chatbot" class="btn btn--secondary">
-                Read Case Study
-              </a>
+              <!-- Case study link removed until case-studies pages exist -->
             </div>
           </article>
 
@@ -188,9 +186,7 @@
               <a href="https://github.com/qaicodes/clinical-dashboard" class="btn btn--secondary" target="_blank">
                 GitHub Repo
               </a>
-              <a href="/case-studies/clinical-dashboard" class="btn btn--secondary">
-                Read Case Study
-              </a>
+              <!-- Case study link removed until case-studies pages exist -->
             </div>
           </article>
         </div>
@@ -314,8 +310,8 @@
 
           <!-- Contact Form -->
           <form
-            action="https://formspree.io/f/YOUR_FORM_ID"
-            method="POST"
+            action="mailto:saleemqurratulain.com"
+            method="GET"
             class="contact-form"
             aria-label="Contact form"
           >
